# BindlessVK

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  conanfile.txt  shader.sh
ABC/: CMakeLists.txt  pch.hpp
ABC/include/ABC/: Aliases.hpp  Assertions.hpp  Logger.hpp  PtrTypes.hpp
ABC/src/: Logger.cpp
Amender/: .clang-format  CMakeLists.txt
Amender/include/Amender/: Aliases.hpp  Amender.hpp  Logger.hpp  Profiler.hpp
Amender/src/: Logger.cpp  Profiler.cpp
AssetBaker/: .clang-format  AssetBaker.cpp  CMakeLists.txt
AssetParser/: .clang-format  AssetParser.cpp  AssetParser.hpp  CMakeLists.txt  TextureAsset.cpp  TextureAsset.hpp
BindlessVk/: .clang-format  CMakeLists.txt  pch.hpp
BindlessVk/include/BindlessVk/: BindlessVkConfig.hpp  Buffer.hpp  Common.hpp  DescriptorAllocator.hpp  Device.hpp  MaterialSystem.hpp  Model.hpp  ModelLoader.hpp  RenderGraph.hpp  RenderPass.hpp  RenderResources.hpp  Renderer.hpp  Shader.hpp  ShaderLoader.hpp  Texture.hpp  TextureLoader.hpp  Types.hpp  VkContext.hpp
BindlessVk/include/BindlessVk/Allocators/: DescriptorAllocator.hpp  LayoutAllocator.hpp  MemoryAllocator.hpp
BindlessVk/include/BindlessVk/Buffers/: Buffer.hpp  FragmentedBuffer.hpp  VertexBuffer.hpp
BindlessVk/include/BindlessVk/Common/: Aliases.hpp  Assertions.hpp  Common.hpp  Constants.hpp  PtrTypes.hpp  Types.hpp  Vulkan.hpp  VulkanIncludes.hpp
BindlessVk/include/BindlessVk/Context/: DebugUtils.hpp  DescriptorAllocator.hpp  Device.hpp  Gpu.hpp  Instance.hpp  Queues.hpp  Surface.hpp  Swapchain.hpp  VkContext.hpp
BindlessVk/include/BindlessVk/Material/: MaterialSystem.hpp
BindlessVk/include/BindlessVk/Model/: Model.hpp  ModelLoader.hpp
BindlessVk/include/BindlessVk/ModelLoaders/: GltfLoader.cpp  GltfLoader.hpp
BindlessVk/include/BindlessVk/Renderer/: RenderNode.hpp  RenderResources.hpp  Renderer.hpp  Rendergraph.hpp  Renderpass.hpp
BindlessVk/include/BindlessVk/Shader/: DescriptorSet.hpp  Shader.hpp  ShaderLoader.hpp
BindlessVk/src/: Buffer.cpp  Common.cpp  Device.cpp  Gpu.cpp  MaterialSystem.cpp  Model.cpp  ModelLoader.cpp  RenderGraph.cpp  RenderResources.cpp  Renderer.cpp  ShaderLoader.cpp  Texture.cpp  TextureLoader.cpp  Tracy.cpp  VkContext.cpp
BindlessVk/src/Allocators/: DescriptorAllocator.cpp  LayoutAllocator.cpp  MemoryAllocator.cpp
BindlessVk/src/Buffers/: Buffer.cpp  FragmentedBuffer.cpp  VertexBuffer.cpp
BindlessVk/src/Context/: DebugUtils.cpp  DescriptorAllocator.cpp  Device.cpp  Gpu.cpp  Instance.cpp  Queues.cpp  Surface.cpp  Swapchain.cpp  VkContext.cpp
BindlessVk/src/Material/: MaterialSystem.cpp
BindlessVk/src/Model/: Model.cpp  ModelLoader.cpp
BindlessVk/src/ModelLoaders/: GltfLoader.cpp
BindlessVk/src/Renderer/: RenderNode.cpp  RenderResources.cpp  Renderer.cpp  Rendergraph.cpp
BindlessVk/src/Shader/: DescriptorSet.cpp  Shader.cpp  ShaderLoader.cpp
BindlessVk/src/ShaderLoaders/: SpvLoader.cpp
BindlessVk/src/Texture/: Image.cpp  Texture.cpp  TextureLoader.cpp
BindlessVk/src/TextureLoaders/: BinaryLoader.cpp  KtxLoader.cpp
Dependencies/: CMakeLists.txt
Dependencies/configurations/imgui/: CMakeLists.txt
Dependencies/stb_image/: CMakeLists.txt  stb_image.c  stb_image.h
Examples/: .clang-format  CMakeLists.txt  pch.hpp
Examples/Development/: Development.cpp  Development.hpp  Entrypoint.cpp  ForwardPass.hpp  Graph.hpp  UserInterfacePass.hpp
Examples/Example_Development/: Development.hpp  Entrypoint.cpp  ForwardPass.hpp  Graph.hpp  UserInterfacePass.hpp
Examples/Example_HelloTriangle/: HelloTriangle.cpp
Examples/Framework/: pch.hpp
Examples/HelloTriangle/: HelloTriangle.cpp
Examples/Rendergraphs/: Graph.cpp  Graph.hpp
Examples/Rendergraphs/Passes/: Forward.cpp  Forward.hpp  UserInterface.cpp  UserInterface.hpp
Framework/: CMakeLists.txt
Framework/include/Framework/: Framework.hpp
Framework/src/Core/: Application.cpp  Common.cpp  Window.cpp
Framework/src/Utils/: CVar.cpp
VulkanRenderer/: CMakeLists.txt
VulkanRenderer/Core/: Base.hpp  Entrypoint.cpp  UUID.hpp  Window.cpp  Window.hpp
VulkanRenderer/Debug/: Logger.hpp
VulkanRenderer/Graphics/: Buffer.cpp  Buffer.hpp  Device.cpp  Device.hpp  MaterialSystem.cpp  MaterialSystem.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Pipeline.hpp  RenderGraph.cpp  RenderGraph.hpp  RenderPass.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Types.hpp
VulkanRenderer/Graphics/Passes/: ForwardPass.hpp  Graph.hpp  UserInterfacePass.hpp
VulkanRenderer/Scene/: Camera.hpp  CameraController.hpp  Components.hpp  Scene.hpp
VulkanRenderer/Utils/: CVar.cpp  CVar.hpp
VulkanRenderer/res/: ModelPixel.glsl  ModelVertex.glsl  PixelShader.glsl  VertexShader.glsl  pixel.glsl  vertex.glsl
VulkanRenderer/src/: .clang-format  Base.h  Buffers.cpp  Buffers.h  DeviceContext.cpp  DeviceContext.h  GraphicsContext.cpp  GraphicsContext.h  Logger.cpp  Pipeline.cpp  Pipeline.h  Shader.cpp  Shader.h  SharedContext.h  Window.cpp  Window.h  clang-format-recursive.sh  main.cpp  pch.h  vkGraphicsContext.cpp  vkGraphicsContext.h
VulkanRenderer/src/Core/: Base.h  Base.hpp  DeletionQueue.hpp  EntryPoint.cpp  Entrypoint.cpp  Timer.h  Timer.hpp  UUID.cpp  UUID.hpp  Window.cpp  Window.h  Window.hpp
VulkanRenderer/src/Debug/: Exceptions.h  Logger.cpp  Logger.h  UserInterface.cpp  UserInterface.h
VulkanRenderer/src/Graphics/: Buffer.cpp  Buffer.hpp  Buffers.cpp  Buffers.h  Device.cpp  Device.h  Device.hpp  DeviceContext.h  Image.cpp  Image.h  Model.cpp  Model.h  Model.hpp  Pipeline.cpp  Pipeline.h  Pipeline.hpp  Renderable.cpp  Renderable.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  RendererCommand.cpp  RendererCommand.h  RendererProgram.cpp  RendererProgram.h  RendererPrograms.cpp  RendererPrograms.h  RendererProgramsImp.h  RendererProgramsVertexTypes.h  Shader.cpp  Shader.h  Shader.hpp  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.hpp  VertexBuffer.cpp  VertexBuffer.hpp
VulkanRenderer/src/Scene/: Components.hpp
VulkanRenderer/src/Utils/: CVar.hpp  Stringifier.cpp  Stringifier.hpp  Timer.hpp
(+81 files in other folders)
